--- a/_posts/2018-08-27-Fractais.md
+++ b/_posts/2018-08-27-Fractais.md
@@ -2,8 +2,9 @@
 title: "Fractais"
 permalink: /fractais/
 header:
-  image: "https://cdn-images-1.medium.com/max/1600/1*aiGZstmng76GGVnC3bU4nA.png"
-  teaser: "https://cdn-images-1.medium.com/max/1600/1*aiGZstmng76GGVnC3bU4nA.png"
+  image: "http://digitalartofjax.com/wp-content/uploads/2016/10/fractal.jpg"
+  caption: "digitalartofjax.com"
+  teaser: "http://digitalartofjax.com/wp-content/uploads/2016/10/fractal.jpg"
 categories:
   - Artigos
   - Galerias
